We are no longer making the main section too wide on IE8.

--- a/src/main/css/spiffyui.ie.css
+++ b/src/main/css/spiffyui.ie.css
@@ -51,10 +51,6 @@
  * CSS properties for IE 7
  */
  
-#mainBody {
-    width: 100%;
-}
-
 #main {
     height: 98%;
 }
